--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	@apply  bg-[#0A0908];
+}
+.answer-choice {
+	@apply font-bold text-xl rounded-lg w-full outline-none py-[7px] transition-all duration-300  mb-4 relative;
+}
+.arround-black {
+	@apply w-[20px] h-[20px]  mx-4 rounded-full  transition-all duration-300;
+}
+@supports (-webkit-touch-callout: none) {
+	.h-safe {
+		height: -webkit-fill-available;
+	}
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer utilities {
+
+	.text-shadow {
+		text-shadow: 0px 0px 7px  rgba(255, 255, 255, 0.6);
+	}
+
 }
